--- a/src/scss/atomic.scss
+++ b/src/scss/atomic.scss
@@ -1,4 +1,4 @@
-$margins: 91;
+$margins: 24;
 
 @each $margin in $margins {
   .mt-#{$margin} { margin-top: #{$margin}px; }
@@ -7,8 +7,10 @@ $margins: 91;
   .me-#{$margin} { margin-inline-end: #{$margin}px; }
 }
 
-$font-sizes: 10;
+$font-sizes: 10, 16, 14, 13;
 
 @each $fs in $font-sizes {
   .fs-#{$fs} { font-size: #{$fs}px; }
 }
+
+.text-center { text-align: center; }
