--- a/src/css/index.css
+++ b/src/css/index.css
@@ -99,12 +99,10 @@
 
 h1, h2, h3, h4 {
   text-transform: uppercase;
-  color: #3C3B3D;
 }
 
 h1 {
   font-size: 60px;
-  font-weight: bold;
 }
 @media (max-width: 1200px) {
   h1 {
@@ -114,7 +112,6 @@ h1 {
 
 h2 {
   font-size: 38px;
-  font-weight: bold;
 }
 @media (max-width: 1200px) {
   h2 {
@@ -125,16 +122,19 @@ h2 {
 h3 {
   font-size: 24px;
 }
+@media (min-width: 1200px) {
+  h3 {
+    font-weight: normal;
+  }
+}
 @media (max-width: 1200px) {
   h3 {
-    font-weight: bold;
     font-size: 16px;
   }
 }
 
 h4 {
   font-size: 18px;
-  font-weight: bold;
 }
 @media (max-width: 1200px) {
   h4 {
@@ -183,8 +183,26 @@ a {
   font-size: 24px;
 }
 
+.fs-32 {
+  font-size: 32px;
+}
+
+.fs-64 {
+  font-size: 64px;
+}
+
 .text-center {
   text-align: center;
+}
+
+.lh-100 {
+  line-height: 100%;
+}
+
+.button {
+  cursor: pointer;
+  border-radius: 3px;
+  text-transform: capitalize;
 }
 
 header {
@@ -358,36 +376,77 @@ header input::placeholder {
   height: 57px;
   margin-top: 24px;
   border: none;
-  border-radius: 5px;
-  cursor: pointer;
 }
 
 #page-pricing {
-  background-color: #08020D;
   display: flex;
   flex-direction: column;
+  align-items: center;
 }
 #page-pricing .container {
   display: flex;
   flex-direction: column;
   align-items: center;
+  max-width: 1200px;
   margin-top: 100px;
-  margin-right: 20px;
-  margin-left: 20px;
+}
+@media (max-width: 1200px) {
+  #page-pricing .container {
+    margin-right: 20px;
+    margin-left: 20px;
+  }
 }
 #page-pricing .card-container {
   display: flex;
-  gap: 47px;
+  flex-wrap: wrap;
+  gap: 50px;
+  margin-top: 45px;
+  margin-bottom: 43px;
 }
 #page-pricing .card {
-  background-position: center;
-  background-size: cover;
-  height: 600px;
-  width: 368.2px;
   display: flex;
   flex-direction: column;
   align-items: center;
+  background-position: center;
+  background-size: cover;
+  height: 615px;
+  width: 366px;
+  padding-right: 1.5rem;
+  padding-left: 1.5rem;
+  border-radius: 1rem;
 }
 #page-pricing .card:nth-child(1) {
-  background-image: url("../images/pricing1.png");
+  background-image: url("../images/subscribe_1.png");
+}
+#page-pricing .card:nth-child(2) {
+  background-image: url("../images/subscribe_2.png");
+}
+#page-pricing .card:nth-child(3) {
+  background-image: url("../images/subscribe_3.png");
+}
+@media (max-width: 1200px) {
+  #page-pricing .card {
+    width: calc(100vw - 40px);
+  }
+}
+#page-pricing .card h3 {
+  margin-top: 24px;
+  margin-bottom: 200px;
+}
+#page-pricing .card .price {
+  display: flex;
+  align-content: flex-start;
+  margin-bottom: 40px;
+}
+#page-pricing .card .price span:nth-child(1) {
+  margin-right: 1rem;
+}
+#page-pricing .card .button {
+  width: 100%;
+  height: 66px;
+  border: 1px solid #FFFFFF;
+  background-color: transparent;
+}
+#page-pricing .card .description {
+  margin-top: 64px;
 }
