--- a/src/scss/defaults.scss
+++ b/src/scss/defaults.scss
@@ -27,32 +27,26 @@
 
 h1, h2, h3, h4 {
   text-transform: uppercase;
-  color: map-get($colors, 'dark');
 }
 
 h1 {
   font-size: 60px;
-  font-weight: bold;
   @include media.mobile { font-size: 30px; }
 }
 
 h2 {
   font-size: 38px;
-  font-weight: bold;
   @include media.mobile { font-size: 18px; }
 }
 
 h3 {
   font-size: 24px;
-  @include media.mobile { 
-    font-weight: bold;
-    font-size: 16px;
-  }
+  @include media.desktop { font-weight: normal; }
+  @include media.mobile { font-size: 16px; }
 }
 
 h4 {
   font-size: 18px;
-  font-weight: bold;
   @include media.mobile { font-size: 18px; }
 }
 
