--- a/src/scss/page-pricing.scss
+++ b/src/scss/page-pricing.scss
@@ -1,37 +1,73 @@
 @use 'colors.scss' as *;
+@use 'media.scss' as media;
 
 #page-pricing {
-  background-color: #08020D;
   display: flex;
   flex-direction: column;
+  align-items: center;
 
-  & .container {
+  .container {
     display: flex;
     flex-direction: column;
     align-items: center;
 
+    max-width: 1200px;
     margin-top: 100px;
-    margin-right: 20px;
-    margin-left: 20px;
+    @include media.mobile { 
+      margin-right: 20px;
+      margin-left: 20px;
+    }
   }
 
-  & .card-container {
+  .card-container {
     display: flex;
-    gap: 47px;
+    flex-wrap: wrap;
+    gap: 50px;
+    margin-top: 45px;
+    margin-bottom: 43px;
   }
 
-  & .card {
-    &:nth-child(1) { background-image: url('../images/pricing1.png'); }
+  .card {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+
+    &:nth-child(1) { background-image: url('../images/subscribe_1.png'); }
+    &:nth-child(2) { background-image: url('../images/subscribe_2.png'); }
+    &:nth-child(3) { background-image: url('../images/subscribe_3.png'); }
     background-position: center;
     background-size: cover;
 
-    height: 600px;
-    width: 368.2px;
+    height: 615px;
+    width: 366px;
+    @include media.mobile { width: calc(100vw - 40px); }
+    padding-right: 1.5rem;
+    padding-left: 1.5rem;
+    border-radius: 1rem;
 
-    display: flex;
-    flex-direction: column;
-    align-items: center;
+    h3 {
+      margin-top: 24px;
+      margin-bottom: 200px;
+    }
 
-    
+    .price {
+      display: flex;
+      align-content: flex-start;
+
+      margin-bottom: 40px;
+      span:nth-child(1) { margin-right: 1rem; }
+    }
+
+    .button {
+      width: 100%;
+      height: 66px;
+
+      border: 1px solid #FFFFFF;
+      background-color: transparent;
+    }
+
+    .description { 
+      margin-top: 64px;
+    }
   }
 }
