--- a/src/scss/page-description.scss
+++ b/src/scss/page-description.scss
@@ -11,22 +11,11 @@
   background-position: center;
   background-size: cover;
 
-  & .container {
+  .container {
     position: relative;
-  
-    display: flex;
-    flex-direction: column;
-  
-    margin-left: 119px;
-    margin-right: 121px;
-  
-    @include media.mobile {
-      margin-left: 20px;
-      margin-right: 20px;
-    }
   }
   
-  & .container-v {
+  .container-v {
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -35,12 +24,12 @@
     @include media.mobile { margin-top: 250px; }
   }
   
-  & .form-description {
+  .form-description {
     margin-top: 31px;
     @include media.mobile { margin-top: 16px; }
   }
   
-  & form {
+  form {
     max-width: 570px;
     margin-top: 17px;
     @include media.mobile { 
@@ -61,7 +50,7 @@
         border: 2px solid #CACACA;
   
         text-indent: 22.24px;
-        &::placeholder { 
+        ::placeholder { 
           color: map-get($colors, 'white'); 
           opacity: 1;
         }
