--- a/src/scss/atomic.scss
+++ b/src/scss/atomic.scss
@@ -1,23 +1,20 @@
-$margins: 24;
+@use 'media.scss' as media;
 
-@each $margin in $margins {
-  .mt-#{$margin} { margin-top: #{$margin}px; }
-  .mb-#{$margin} { margin-bottom: #{$margin}px; }
-  .ms-#{$margin} { margin-inline-start: #{$margin}px; }
-  .me-#{$margin} { margin-inline-end: #{$margin}px; }
-}
-
-$font-sizes: 10, 16, 14, 13, 24, 32, 64;
+$font-sizes: 10, 16, 14, 13, 24, 32, 64, 30, 12;
 
 @each $fs in $font-sizes {
   .fs-#{$fs} { font-size: #{$fs}px; }
+}
+
+@each $fs in $font-sizes {
+  @include media.mobile { .fsm-#{$fs} { font-size: #{$fs}px; } }
 }
 
 .text-center { text-align: center; }
 
 .lh-100 { line-height: 100%; }
 
-.button { 
+.button {
   cursor: pointer;
   border-radius: 3px; 
   text-transform: capitalize;
