--- a/src/scss/page-news.scss
+++ b/src/scss/page-news.scss
@@ -3,6 +3,64 @@
 #page-news {
   .container {
     margin-top: 100px;
-    height: 842px;
+  }
+
+  .news-container {
+    width: 100%;
+    margin-top: 48px;
+
+    display: flex;
+    flex-direction: column;
+    gap: 65px;
+  }
+
+  .news-item {
+    display: flex;
+    @include media.mobile { flex-wrap: wrap; }
+    justify-content: space-between;
+    gap: 50px;
+
+    img {
+      width: 575px;
+      height: 286px;
+
+      @include media.mobile {
+        width: 100%;
+        height: 186px;
+      }
+    }
+
+    &:nth-child(2) {
+      flex-direction: row-reverse;
+    }
+  }
+
+  .news-content {
+    margin-top: 30px;
+  }
+
+  .news-info {
+    display: flex;
+    align-items: center;
+    gap: 16px;
+
+    margin-top: 24px;
+    //margin-bottom: 48px;
+
+    img {
+      width: 19px;
+      height: 19px;
+    }
+  }
+
+  button {
+    border: 1px solid #CACACA;
+    border-radius: 5px;
+
+    padding-left: 30px;
+    padding-right: 30px;
+    padding-top: 16px;
+    padding-bottom: 16px;
+    margin-top: 48px;
   }
 }
