--- a/src/scss/defaults.scss
+++ b/src/scss/defaults.scss
@@ -53,10 +53,17 @@ h4 {
 a {
   color: inherit;
   text-decoration: none;
+  &:hover { cursor: pointer; }
 }
 
 input, button {
   color: inherit;
+}
+
+section, footer {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 .container {
@@ -73,9 +80,4 @@ input, button {
   }
 }
 
-section {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-}
-
+hr { width: 100%; }
