artist page started

--- a/src/scss/defaults.scss
+++ b/src/scss/defaults.scss
@@ -60,7 +60,7 @@ input, button {
   color: inherit;
 }
 
-section, footer {
+section, footer, header {
   display: flex;
   flex-direction: column;
   align-items: center;
