--- a/src/css/artist.css
+++ b/src/css/artist.css
@@ -353,7 +353,7 @@ header input::placeholder {
 
 #page-description {
   background-color: transparent;
-  background-image: url("../images/banner.png");
+  background-image: url("../images/Morten Harket.png");
   background-position: center;
   background-size: cover;
   padding-top: 200px;
@@ -407,151 +407,6 @@ header input::placeholder {
   height: 57px;
   margin-top: 24px;
   border: none;
-}
-
-#page-pricing .container {
-  margin-top: 100px;
-}
-#page-pricing .card-container {
-  display: flex;
-  flex-wrap: wrap;
-  gap: 50px;
-  margin-top: 45px;
-  margin-bottom: 43px;
-}
-#page-pricing .card {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  background-position: center;
-  background-size: cover;
-  height: 615px;
-  width: 366px;
-  padding-right: 1.5rem;
-  padding-left: 1.5rem;
-  border-radius: 1rem;
-}
-#page-pricing .card:nth-child(1) {
-  background-image: url("../images/subscribe_1.png");
-}
-#page-pricing .card:nth-child(2) {
-  background-image: url("../images/subscribe_2.png");
-}
-#page-pricing .card:nth-child(3) {
-  background-image: url("../images/subscribe_3.png");
-}
-@media (max-width: 1200px) {
-  #page-pricing .card {
-    width: calc(100vw - 40px);
-  }
-}
-#page-pricing .card h3 {
-  margin-top: 24px;
-  margin-bottom: 200px;
-}
-#page-pricing .card .price {
-  display: flex;
-  align-content: flex-start;
-  margin-bottom: 40px;
-}
-#page-pricing .card .price span:nth-child(1) {
-  margin-right: 1rem;
-}
-#page-pricing .card .button {
-  width: 100%;
-  height: 66px;
-  border: 1px solid #FFFFFF;
-  background-color: transparent;
-}
-#page-pricing .card .description {
-  margin-top: 64px;
-}
-
-#page-news .container {
-  margin-top: 100px;
-}
-#page-news .news-container {
-  width: 100%;
-  margin-top: 48px;
-  display: flex;
-  flex-direction: column;
-  gap: 65px;
-}
-#page-news .news-item {
-  display: flex;
-  justify-content: space-between;
-  gap: 50px;
-}
-@media (max-width: 1200px) {
-  #page-news .news-item {
-    flex-wrap: wrap;
-  }
-}
-#page-news .news-item img {
-  width: 575px;
-  height: 286px;
-}
-@media (max-width: 1200px) {
-  #page-news .news-item img {
-    width: 100%;
-    height: 186px;
-  }
-}
-#page-news .news-item:nth-child(2) {
-  flex-direction: row-reverse;
-}
-#page-news .news-content {
-  margin-top: 30px;
-}
-#page-news .news-info {
-  display: flex;
-  align-items: center;
-  gap: 16px;
-  margin-top: 24px;
-}
-#page-news .news-info img {
-  width: 19px;
-  height: 19px;
-}
-#page-news button {
-  border: 1px solid #CACACA;
-  border-radius: 5px;
-  padding-left: 30px;
-  padding-right: 30px;
-  padding-top: 16px;
-  padding-bottom: 16px;
-  margin-top: 48px;
-}
-
-#page-app .container {
-  margin-top: 100px;
-  margin-bottom: 100px;
-}
-#page-app .content-container {
-  display: flex;
-  gap: 144px;
-  width: 100%;
-  margin-top: 48px;
-}
-@media (max-width: 1200px) {
-  #page-app .content-container {
-    gap: 16px;
-    flex-direction: column-reverse;
-    flex-wrap: wrap;
-  }
-}
-#page-app p {
-  max-width: 600px;
-  margin-top: 16px;
-}
-#page-app .button {
-  border-width: 0;
-  border-radius: 32px;
-  padding-top: 16px;
-  padding-bottom: 16px;
-  padding-right: 40px;
-  padding-left: 40px;
-  margin-top: 16px;
 }
 
 footer {
