--- a/src/scss/artist/page-description.scss
+++ b/src/scss/artist/page-description.scss
@@ -1,10 +1,10 @@
-@use 'header.scss';
-@use 'media.scss' as media;
-@use 'colors.scss' as *;
+@use '../header.scss';
+@use '../media.scss' as media;
+@use '../colors.scss' as *;
 
 #page-description {
   background-color: transparent;
-  background-image: url('../images/banner.png');
+  background-image: url('../images/Morten Harket.png');
   background-position: center;
   background-size: cover;
 
