--- a/src/scss/footer.scss
+++ b/src/scss/footer.scss
@@ -25,13 +25,19 @@ footer {
       align-items: center;
       gap: 24px;
     }
-
-    
   }
 
   hr { 
     margin-top: 72px; 
     margin-bottom: 40px;
+  }
+
+  .end-container {
+    display: flex;
+    gap: 16px;
+    @include media.mobile { flex-direction: column; }
+
+    width: 100%;
   }
   
 }
