--- a/src/css/artist.css
+++ b/src/css/artist.css
@@ -114,7 +114,7 @@ h1, h2, h3, h4 {
 h1 {
   font-size: 60px;
 }
-@media (max-width: 1200px) {
+@media (max-width: 1239px) {
   h1 {
     font-size: 30px;
   }
@@ -123,7 +123,7 @@ h1 {
 h2 {
   font-size: 38px;
 }
-@media (max-width: 1200px) {
+@media (max-width: 1239px) {
   h2 {
     font-size: 18px;
   }
@@ -132,12 +132,12 @@ h2 {
 h3 {
   font-size: 24px;
 }
-@media (min-width: 1200px) {
+@media (min-width: 1240px) {
   h3 {
     font-weight: normal;
   }
 }
-@media (max-width: 1200px) {
+@media (max-width: 1239px) {
   h3 {
     font-size: 16px;
   }
@@ -146,7 +146,7 @@ h3 {
 h4 {
   font-size: 18px;
 }
-@media (max-width: 1200px) {
+@media (max-width: 1239px) {
   h4 {
     font-size: 18px;
   }
@@ -177,7 +177,7 @@ section, footer, header {
   max-width: 1200px;
   width: 100%;
 }
-@media (max-width: 1200px) {
+@media (max-width: 1239px) {
   .container {
     width: calc(100% - 40px);
     margin-right: 20px;
@@ -231,47 +231,47 @@ hr {
   font-size: 12px;
 }
 
-@media (max-width: 1200px) {
+@media (max-width: 1239px) {
   .fsm-10 {
     font-size: 10px;
   }
 }
-@media (max-width: 1200px) {
+@media (max-width: 1239px) {
   .fsm-16 {
     font-size: 16px;
   }
 }
-@media (max-width: 1200px) {
+@media (max-width: 1239px) {
   .fsm-14 {
     font-size: 14px;
   }
 }
-@media (max-width: 1200px) {
+@media (max-width: 1239px) {
   .fsm-13 {
     font-size: 13px;
   }
 }
-@media (max-width: 1200px) {
+@media (max-width: 1239px) {
   .fsm-24 {
     font-size: 24px;
   }
 }
-@media (max-width: 1200px) {
+@media (max-width: 1239px) {
   .fsm-32 {
     font-size: 32px;
   }
 }
-@media (max-width: 1200px) {
+@media (max-width: 1239px) {
   .fsm-64 {
     font-size: 64px;
   }
 }
-@media (max-width: 1200px) {
+@media (max-width: 1239px) {
   .fsm-30 {
     font-size: 30px;
   }
 }
-@media (max-width: 1200px) {
+@media (max-width: 1239px) {
   .fsm-12 {
     font-size: 12px;
   }
@@ -293,7 +293,7 @@ header {
 header * {
   font-size: 11px;
 }
-@media (max-width: 1200px) {
+@media (max-width: 1239px) {
   header {
     top: 27px;
     flex-direction: column;
@@ -308,7 +308,7 @@ header .header-container {
   gap: 18px;
   width: 100%;
 }
-@media (max-width: 1200px) {
+@media (max-width: 1239px) {
   header .header-container {
     flex-direction: column;
   }
@@ -318,7 +318,7 @@ header .starting-group {
   align-items: center;
   gap: 91px;
 }
-@media (max-width: 1200px) {
+@media (max-width: 1239px) {
   header .starting-group {
     align-items: initial;
     flex-direction: column;
@@ -338,7 +338,7 @@ header .nav-group {
   display: flex;
   gap: 24px;
 }
-@media (max-width: 1200px) {
+@media (max-width: 1239px) {
   header .nav-group {
     flex-direction: column;
     gap: 3px;
@@ -352,7 +352,7 @@ header input {
   font-size: 13.3px;
   text-indent: 10px;
 }
-@media (max-width: 1200px) {
+@media (max-width: 1239px) {
   header input {
     width: 100%;
   }
@@ -380,6 +380,11 @@ header input::placeholder {
   gap: 1.5rem;
   margin-top: 48px;
 }
+@media (max-width: 1239px) {
+  #page-description .buttons {
+    flex-direction: column;
+  }
+}
 #page-description .buttons .button {
   display: flex;
   align-items: center;
@@ -396,6 +401,46 @@ header input::placeholder {
   height: 20px;
 }
 
+#page-popular-track {
+  padding-top: 100px;
+}
+#page-popular-track .container {
+  align-items: start;
+}
+#page-popular-track .track-container {
+  display: flex;
+  flex-direction: column;
+  gap: 25px;
+  width: 100%;
+  margin-top: 48px;
+}
+#page-popular-track .track-container .track-row {
+  display: flex;
+  gap: 50px;
+}
+@media (max-width: 1239px) {
+  #page-popular-track .track-container .track-row {
+    flex-direction: column;
+    gap: 25px;
+  }
+}
+#page-popular-track .track {
+  display: flex;
+  align-items: center;
+  flex-grow: 1;
+  flex-basis: calc(50% - 50px);
+}
+#page-popular-track .track img {
+  width: 55px;
+  height: 55px;
+}
+#page-popular-track .track .track-info {
+  margin-left: 15px;
+}
+#page-popular-track .track .track-length {
+  margin-left: auto;
+}
+
 footer {
   background: linear-gradient(89.75deg, #5328a1 32.83%, #95390c 81.56%);
   padding-top: 3rem;
@@ -407,7 +452,7 @@ footer .urls-container {
   gap: 40px;
   width: 100%;
 }
-@media (max-width: 1200px) {
+@media (max-width: 1239px) {
   footer .urls-container {
     flex-direction: column;
   }
@@ -435,7 +480,7 @@ footer .end-container {
   gap: 16px;
   width: 100%;
 }
-@media (max-width: 1200px) {
+@media (max-width: 1239px) {
   footer .end-container {
     flex-direction: column;
   }
