--- a/src/scss/artist/index.scss
+++ b/src/scss/artist/index.scss
@@ -1,6 +1,8 @@
 @use '../defaults.scss';
 @use '../atomic.scss';
+@use '../colors.scss';
 
 @use '../header.scss';
 @use 'page-description.scss';
+@use 'page-popular-track.scss';
 @use '../footer.scss';
