--- a/src/scss/artist/index.scss
+++ b/src/scss/artist/index.scss
@@ -5,4 +5,6 @@
 @use '../header.scss';
 @use 'page-description.scss';
 @use 'page-popular-track.scss';
+@use 'page-discography.scss';
+@use 'page-similar.scss';
 @use '../footer.scss';
