--- a/src/css/index.css
+++ b/src/css/index.css
@@ -231,6 +231,10 @@ hr {
   font-size: 12px;
 }
 
+.fs-18 {
+  font-size: 18px;
+}
+
 @media (max-width: 1239px) {
   .fsm-10 {
     font-size: 10px;
@@ -274,6 +278,11 @@ hr {
 @media (max-width: 1239px) {
   .fsm-12 {
     font-size: 12px;
+  }
+}
+@media (max-width: 1239px) {
+  .fsm-18 {
+    font-size: 18px;
   }
 }
 .text-center {
