--- a/src/scss/artist/page-popular-track.scss
+++ b/src/scss/artist/page-popular-track.scss
@@ -17,11 +17,9 @@
 
     .track-row {
       display: flex;
-      gap: 50px;
-      @include media.mobile {
-        flex-direction: column;
-        gap: 25px;
-      }
+      row-gap: 25px;
+      column-gap: 50px;
+      @include media.mobile { flex-direction: column; }
     }
   }
 
