--- a/src/scss/colors.scss
+++ b/src/scss/colors.scss
@@ -1,22 +1,23 @@
 $colors: (
-  "black": #08020D,
-  "gray": #E0E0E0,
-  "dark-gray": #CACACA,
-  "dark": #3C3B3D,
-  "green": #34C176,
-  "orange": #F89202,
-  "purple": #5328A1,
-  "red": #95390C,
+  "black": #08020d,
+  "gray": #e0e0e0,
+  "dark-gray": #cacaca,
+  "dark": #3c3b3d,
+  "green": #34c176,
+  "orange": #f89202,
+  "purple": #5328a1,
+  "red": #95390c,
   "white": white,
   "transparent": transparent,
 );
 
 @each $k, $v in $colors {
-  .color-#{$k} { 
+  .color-#{$k} {
     color: #{$v};
   }
-  .bg-#{$k} { 
-    background-color: #{$v}; 
+  .bg-#{$k} {
     border-color: #{$v};
+
+    background-color: #{$v};
   }
 }
