--- a/src/scss/header.scss
+++ b/src/scss/header.scss
@@ -8,72 +8,74 @@ header {
 
   position: absolute;
   top: 25px;
-  left: 0px;
-  right: 0px;
+  right: 0;
+  left: 0;
 
   @include media.mobile {
     top: 27px;
 
     flex-direction: column;
-    justify-content: initial;
-    align-items: initial;
     gap: 18px;
+    align-items: initial;
+    justify-content: initial;
   }
 
   .header-container {
     display: flex;
-    justify-content: space-between;
     gap: 18px;
-    @include media.mobile { flex-direction: column; }
+    justify-content: space-between;
 
     width: 100%;
+
+    @include media.mobile { flex-direction: column; }
   }
 
-  
-  
+
+
   .starting-group {
     display: flex;
-    align-items: center;
     gap: 91px;
-  
+    align-items: center;
+
     @include media.mobile {
-      align-items: initial;
       flex-direction: column;
       gap: 17px;
+      align-items: initial;
     }
   }
-  
+
   .logo-group {
     display: flex;
-    align-items: center;
     gap: 16px;
+    align-items: center;
 
     img {
       width: 24px;
       height: 24px;
     }
   }
-  
+
   .nav-group {
     display: flex;
     gap: 24px;
-  
+
     @include media.mobile {
       flex-direction: column;
       gap: 3px;
     }
   }
-  
+
   input {
     width: 248px;
-    @include media.mobile { width: 100%; }
     height: 25px;
-    border-radius: 50px;
     border: none;
-  
-    &::placeholder { color: #757575 }
-  
+    border-radius: 50px;
+
     font-size: 13.3px;
     text-indent: 10px;
+
+    @include media.mobile { width: 100%; }
+
+    &::placeholder { color: #757575; }
   }
 }
