--- a/src/scss/page-description.scss
+++ b/src/scss/page-description.scss
@@ -2,55 +2,61 @@
 @use 'colors.scss' as *;
 
 #page-description {
+
+  padding-top: 200px;
+  padding-bottom: 200px;
+
   background-color: transparent;
   background-image: url('../images/banner.png');
   background-position: center;
   background-size: cover;
 
-  padding-top: 200px;
   @include media.mobile { padding-top: 250px; }
-  padding-bottom: 200px;
-  
+
   .form-description {
     margin-top: 31px;
+
     @include media.mobile { margin-top: 16px; }
   }
-  
+
   form {
     max-width: 570px;
     margin-top: 17px;
-    @include media.mobile { 
+
+    @include media.mobile {
       width: 100%;
-      margin-top: 16px; 
+      margin-top: 16px;
     }
-  
+
     div {
       display: flex;
-      @include media.mobile { flex-direction: column; }
       gap: 34px;
-  
+
+      @include media.mobile { flex-direction: column; }
+
       input {
         min-width: 270px;
         min-height: 50px;
-  
+        border: 2px solid #cacaca;
+
         border-radius: 3px;
-        border: 2px solid #CACACA;
-  
+
         text-indent: 22.24px;
-        ::placeholder { 
-          color: map-get($colors, 'white'); 
+
+        ::placeholder {
+          color: map-get($colors, 'white');
+
           opacity: 1;
         }
       }
     }
-  
+
     input[type=submit] {
       width: 100%;
       height: 57px;
       margin-top: 24px;
-  
+
       border: none;
     }
   }
 }
-
