--- a/src/scss/page-pricing.scss
+++ b/src/scss/page-pricing.scss
@@ -17,19 +17,21 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+    width: 366px;
+
+    height: 615px;
+    padding-right: 1.5rem;
+    padding-left: 1.5rem;
+    border-radius: 1rem;
+
+    background-position: center;
+    background-size: cover;
 
     &:nth-child(1) { background-image: url('../images/subscribe_1.png'); }
     &:nth-child(2) { background-image: url('../images/subscribe_2.png'); }
     &:nth-child(3) { background-image: url('../images/subscribe_3.png'); }
-    background-position: center;
-    background-size: cover;
 
-    height: 615px;
-    width: 366px;
     @include media.mobile { width: calc(100vw - 40px); }
-    padding-right: 1.5rem;
-    padding-left: 1.5rem;
-    border-radius: 1rem;
 
     h3 {
       margin-top: 24px;
@@ -48,11 +50,12 @@
       width: 100%;
       height: 66px;
 
-      border: 1px solid #FFFFFF;
+      border: 1px solid #fff;
+
       background-color: transparent;
     }
 
-    .description { 
+    .description {
       margin-top: 64px;
     }
   }
